# common-libraries

./: .gitignore  Readme.md
Normalizer/: CMakeLists.txt  IntegerNormalizer.cpp  IntegerNormalizer.h
Rescaler/: CMakeLists.txt  IntegerRescaler.cpp  IntegerRescaler.h
Rescaler/Unit-Test/: CMakeLists.txt  IntegerRescaler-test.cpp  IntegerRescaler-test.h
